[metadata]
name = dlmfapi
version = 0.1.0
description = Linking DLMF with zbMATH
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Dariush Ehsani, Matteo Petrera
maintainer_email = dariush@zbmath.org, matteo@zbmath.org

[options]
setup_requires = setuptools-scm
install_requires =
    Flask
    Flask-Migrate
    flask-restx
    Flask-SQLAlchemy
    psycopg2
    gunicorn
    SQLAlchemy
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >=3.6
zip_safe = false

[options.packages.find]
where = src

[pycodestyle]
max-line-length = 79

[flake8]
max-line-length = 79