[metadata]
name = zbmath_links_api
version = 0.4.2
description = Providing and managing links between zbMATH and other math related resources using the Scholix format.
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Dariush Ehsani, Matteo Petrera
maintainer_email = dariush@zbmath.org, matteo@zbmath.org

[options]
setup_requires = setuptools-scm
install_requires =
    bs4
    Flask>=1,<2
    Flask-Migrate
    flask-restx
    Flask-SQLAlchemy
    psycopg2
    gunicorn
    requests
    SQLAlchemy
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >=3.6
zip_safe = false

[options.extras_require]
test =
    black
    flake8
    isort
    pytest
    radon
    flake8_polyfill
    coverage

[options.packages.find]
where = src

[pycodestyle]
max-line-length = 79

[flake8]
max-line-length = 79
